Update: Migrate away from URL to URI in v2 State